tests/parser/error/definition_wrong_ty_restr.out
tests/parser/error/definition_wrong_ty_restr.st:1:7
1 | def a : 1 := 2.
            ^
Error: Expected type
